[gd_scene format=3 uid="uid://game-scene"]

[ext_resource path="res://scripts/GameScene.gd" type="Script" id=1]
[ext_resource path="res://scenes/PauseOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ResultOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/UIButtonFeedback.gd" type="Script" id=4]

[node name="GameScene" type="Control"]
script = ExtResource( 1 )
anchors_preset = 15

[node name="Background" type="ColorRect" parent="GameScene"]
anchors_preset = 15
color = Color(0.03, 0.05, 0.12)

[node name="TopBar" type="Panel" parent="GameScene"]
anchors_preset = 15
margin_left = 20
margin_right = -20
margin_top = 20
margin_bottom = 140

[node name="TopBarHBox" type="HBoxContainer" parent="TopBar"]
alignment = 2
separation = 12

[node name="ModeLabel" type="Label" parent="TopBarHBox"]
align = 0
text = "Classic"

[node name="MovesLabel" type="Label" parent="TopBarHBox"]
align = 0
text = "Moves: 0"

[node name="ScoreLabel" type="Label" parent="TopBarHBox"]
align = 0
text = "Score: 0"

[node name="TimerLabel" type="Label" parent="TopBarHBox"]
align = 0
text = "Time: 0s"

[node name="HintButton" type="Button" parent="TopBarHBox"]
script = ExtResource( 4 )
text = "Hint"

[node name="PauseButton" type="Button" parent="TopBarHBox"]
script = ExtResource( 4 )
text = "Pause"

[node name="GameArea" type="MarginContainer" parent="GameScene"]
anchors_preset = 15
margin_left = 20
margin_right = -20
margin_top = 180
margin_bottom = -20

[node name="GridContainer" type="GridContainer" parent="GameArea"]
columns = 4
custom_constants/separation = 14

[node name="Countdown" type="Timer" parent="GameScene"]
wait_time = 1.0
one_shot = false
autostart = false

[node name="FlipBackDelay" type="Timer" parent="GameScene"]
wait_time = 1.0
one_shot = true
autostart = false

[node name="PauseOverlay" parent="GameScene" instance=ExtResource( 2 )]

[node name="ResultOverlay" parent="GameScene" instance=ExtResource( 3 )]
